add a couple of keys

--- a/nameservice/Makefile
+++ b/nameservice/Makefile
@@ -16,8 +16,8 @@ all: install
 
 install: go.sum
 		@echo "--> Installing nsd & nscli"
-		@go install -mod=readonly $(BUILD_FLAGS) ./cmd/nsd
-		@go install -mod=readonly $(BUILD_FLAGS) ./cmd/nscli
+		go install -mod=readonly $(BUILD_FLAGS) ./cmd/nsd
+		go install -mod=readonly $(BUILD_FLAGS) ./cmd/nscli
 
 go.sum: go.mod
 		@echo "--> Ensure dependencies have not been modified"
